--- a/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
+++ b/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
@@ -101,10 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +118,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# preciso de uma lista pata representar meu individuo\n",
+    "# quantidade de elementos vai ser o número de genes\n",
+    "# cada gene será gerado aleatóriamente \n",
+    "\n",
+    "def gene_cb():\n",
+    "    \"\"\" Gera um gene válido para o problema das caixas binárias\n",
+    "    \n",
+    "    Return\n",
+    "        Um valor zero ou um,.\n",
+    "    \"\"\"\n",
+    "    lista = [0, 1]\n",
+    "    gene = random.choice(lista)\n",
+    "    \n",
+    "    return gene\n",
+    "\n",
+    "def individuo_cb(n):\n",
+    "    \"\"\" Gera um indivíduo para o problema das caixas binárias\n",
+    "    \n",
+    "    Args.:\n",
+    "        n: número de genes do indivíduo.\n",
+    "    \n",
+    "    return\n",
+    "        Uma lista com n genes. Cada gene é um valor zero ou um\n",
+    "    \"\"\"\n",
+    "    individuo = []\n",
+    "    for i in range(n):\n",
+    "        gene = gene_cb()\n",
+    "        individuo.append(gene)\n",
+    "    return individuo\n",
+    "\n",
+    "def func_obj_cb(individuo):\n",
+    "    \"\"\" Computa a função objetiva no problema das caixas binárias.\n",
+    "    \n",
+    "    Args:\n",
+    "        indivíduo: lista contendo os genes das caixas binárias\n",
+    "        \n",
+    "    return:\n",
+    "        Um valor representando a soma dos genes do indivíduo.\n",
+    "    \"\"\"\n",
+    "    return sum(individuo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constantes\n",
+    "\n",
+    "N = 16 #quantidade de sorteios\n",
+    "NUM_GENES = 4 # quantidade de genes (caixas) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0] 2\n",
+      "[0, 1, 1, 0] 2\n",
+      "[0, 0, 0, 1] 1\n",
+      "[1, 1, 1, 1] 4\n",
+      "[1, 0, 1, 0] 2\n",
+      "[0, 1, 1, 0] 2\n",
+      "[1, 1, 1, 1] 4\n",
+      "[1, 1, 1, 1] 4\n",
+      "[0, 1, 1, 1] 3\n",
+      "[0, 0, 1, 1] 2\n",
+      "[0, 1, 1, 1] 3\n",
+      "[1, 0, 1, 1] 3\n",
+      "[0, 0, 1, 0] 1\n",
+      "[0, 1, 0, 1] 2\n",
+      "[0, 0, 1, 1] 2\n",
+      "[1, 0, 1, 0] 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(N):\n",
+    "    candidato = individuo_cb(NUM_GENES)\n",
+    "    fobj = func_obj_cb(candidato)\n",
+    "    print(candidato, fobj)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,6 +217,13 @@
    "source": [
     "## Conclusão\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resolvemos o problema das caixas binárias depois de várias rodadas, concluindo que é um problema probabilistico pois os resultados obtido foram diferentes em cada rodada."
    ]
   },
   {
@@ -161,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
