--- a/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
+++ b/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
@@ -103,10 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from funcoes import func_obj_cb\n",
+    "import itertools"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +121,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0] 0\n",
+      "[0, 0, 0, 1] 1\n",
+      "[0, 0, 1, 0] 1\n",
+      "[0, 0, 1, 1] 2\n",
+      "[0, 1, 0, 0] 1\n",
+      "[0, 1, 0, 1] 2\n",
+      "[0, 1, 1, 0] 2\n",
+      "[0, 1, 1, 1] 3\n",
+      "[1, 0, 0, 0] 1\n",
+      "[1, 0, 0, 1] 2\n",
+      "[1, 0, 1, 0] 2\n",
+      "[1, 0, 1, 1] 3\n",
+      "[1, 1, 0, 0] 2\n",
+      "[1, 1, 0, 1] 3\n",
+      "[1, 1, 1, 0] 3\n",
+      "[1, 1, 1, 1] 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for gene1 in [0,1]:\n",
+    "    for gene2 in [0,1]:\n",
+    "        for gene3 in [0,1]:\n",
+    "            for gene4 in [0,1]:\n",
+    "                individuo = [gene1, gene2, gene3, gene4]\n",
+    "                fobj = func_obj_cb(individuo)\n",
+    "                print (individuo, fobj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0, 0, 0) 0\n",
+      "(0, 0, 0, 1) 1\n",
+      "(0, 0, 1, 0) 1\n",
+      "(0, 0, 1, 1) 2\n",
+      "(0, 1, 0, 0) 1\n",
+      "(0, 1, 0, 1) 2\n",
+      "(0, 1, 1, 0) 2\n",
+      "(0, 1, 1, 1) 3\n",
+      "(1, 0, 0, 0) 1\n",
+      "(1, 0, 0, 1) 2\n",
+      "(1, 0, 1, 0) 2\n",
+      "(1, 0, 1, 1) 3\n",
+      "(1, 1, 0, 0) 2\n",
+      "(1, 1, 0, 1) 3\n",
+      "(1, 1, 1, 0) 3\n",
+      "(1, 1, 1, 1) 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# código com intertools\n",
+    "for individuo in itertools.product([0,1], repeat = 4): #posso repetir o [0,1] o números de vezes q\n",
+    "    fobj =  func_obj_cb(individuo)                    # quero repetir\n",
+    "    print(individuo, fobj)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,6 +198,13 @@
    "source": [
     "## Conclusão\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testamos duas maneiras de fazer a busca em grade, a primeira levava muitos comandos e repetições, para a segunda conseguimos ser mais resumidos importando o intertools"
    ]
   },
   {
@@ -163,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
