Atualizações de alguns códigos e experimento A3 feito

--- a/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
+++ b/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
@@ -101,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "from funcoes import individuo_cb, func_obj_cb"
    ]
   },
   {
@@ -118,55 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preciso de uma lista pata representar meu individuo\n",
-    "# quantidade de elementos vai ser o número de genes\n",
-    "# cada gene será gerado aleatóriamente \n",
-    "\n",
-    "def gene_cb():\n",
-    "    \"\"\" Gera um gene válido para o problema das caixas binárias\n",
-    "    \n",
-    "    Return\n",
-    "        Um valor zero ou um,.\n",
-    "    \"\"\"\n",
-    "    lista = [0, 1]\n",
-    "    gene = random.choice(lista)\n",
-    "    \n",
-    "    return gene\n",
-    "\n",
-    "def individuo_cb(n):\n",
-    "    \"\"\" Gera um indivíduo para o problema das caixas binárias\n",
-    "    \n",
-    "    Args.:\n",
-    "        n: número de genes do indivíduo.\n",
-    "    \n",
-    "    return\n",
-    "        Uma lista com n genes. Cada gene é um valor zero ou um\n",
-    "    \"\"\"\n",
-    "    individuo = []\n",
-    "    for i in range(n):\n",
-    "        gene = gene_cb()\n",
-    "        individuo.append(gene)\n",
-    "    return individuo\n",
-    "\n",
-    "def func_obj_cb(individuo):\n",
-    "    \"\"\" Computa a função objetiva no problema das caixas binárias.\n",
-    "    \n",
-    "    Args:\n",
-    "        indivíduo: lista contendo os genes das caixas binárias\n",
-    "        \n",
-    "    return:\n",
-    "        Um valor representando a soma dos genes do indivíduo.\n",
-    "    \"\"\"\n",
-    "    return sum(individuo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,13 +138,13 @@
      "output_type": "stream",
      "text": [
       "[1, 0, 1, 1] 3\n",
+      "[0, 0, 0, 0] 0\n",
+      "[0, 1, 1, 1] 3\n",
+      "[0, 0, 0, 0] 0\n",
       "[0, 0, 0, 1] 1\n",
-      "[1, 1, 0, 1] 3\n",
-      "[1, 0, 0, 1] 2\n",
-      "[0, 0, 1, 1] 2\n",
-      "[0, 1, 0, 1] 2\n",
-      "[0, 1, 0, 0] 1\n",
-      "[1, 0, 1, 1] 3\n"
+      "[0, 1, 1, 1] 3\n",
+      "[1, 0, 0, 0] 1\n",
+      "[0, 0, 0, 1] 1\n"
      ]
     }
    ],
