--- a/AlgoritmosGeneticos/Algumas coisas que valem a pena aprender ou relembrar.ipynb
+++ b/AlgoritmosGeneticos/Algumas coisas que valem a pena aprender ou relembrar.ipynb
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quero sortear um número real dentro do intervalo $[0,1[$\n",
+    "### Quero sortear um número real dentro do intervalo $[0,1]$\n",
     "\n"
    ]
   },
@@ -1237,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
