--- a/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
+++ b/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
@@ -51,10 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from funcoes import populacao_nb\n",
+    "from funcoes import func_obj_pop_nb as func_obj_pop\n",
+    "from funcoes import selecao_roleta_max as funcao_selecao\n",
+    "from funcoes import cruzamento_ponto_simples as funcao_cruzamento\n",
+    "from funcoes import mutacao_nb\n",
+    "import random"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,6 +70,106 @@
     "## Códigos e discussão\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constantes\n",
+    "TAMANHO_POP = 6\n",
+    "NUM_GENES = 4\n",
+    "NUM_GERACOES = 1000\n",
+    "CHANCE_CRUZAMENTO = 0.5\n",
+    "CHANCE_MUTADO = 0.05\n",
+    "\n",
+    "# relacionadas à caixas não binárias\n",
+    "\n",
+    "VALOR_MAX_CAIXA = 100\n",
+    "NUM_GENES = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funções locais\n",
+    "def cria_populacao_inicial(tamanho, n_genes): \n",
+    "    return populacao_nb(tamanho, n_genes, VALOR_MAX_CAIXA) \n",
+    "def funcao_mutacao(individuo): \n",
+    "    return mutacao_nb(individuo, VALOR_MAX_CAIXA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "População inicial:\n",
+      "[[53, 74, 75, 26], [96, 36, 34, 37], [53, 2, 29, 18], [85, 67, 15, 96], [90, 8, 35, 57], [48, 29, 50, 6]]\n",
+      "\n",
+      "População final:\n",
+      "[[83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "populacao = cria_populacao_inicial(TAMANHO_POP, NUM_GENES)\n",
+    "print()\n",
+    "print('População inicial:')\n",
+    "print(populacao)\n",
+    "\n",
+    "for n in range(NUM_GERACOES):\n",
+    "    fitness = func_obj_pop(populacao)\n",
+    "    populacao = funcao_selecao(populacao, fitness)\n",
+    "    \n",
+    "    pais = populacao[0::2]\n",
+    "    maes = populacao[1::2]\n",
+    "    \n",
+    "    contador = 0\n",
+    "    \n",
+    "    for pai, mae in zip(pais, maes):\n",
+    "        if random.random() <= CHANCE_CRUZAMENTO:\n",
+    "            #vai acontecer cruzamento\n",
+    "            filho1, filho2 = funcao_cruzamento(pai,mae)\n",
+    "            populacao[contador] = filho1\n",
+    "            populacao[contador+1] = filho2\n",
+    "        contador = contador+2\n",
+    "\n",
+    "    for n in range(len(populacao)):\n",
+    "        if random.random() <= CHANCE_MUTADO:\n",
+    "            individuo = populacao[n]\n",
+    "            #print()\n",
+    "            #print(individuo)\n",
+    "            populacao[n] = funcao_mutacao(individuo)\n",
+    "            #print(populacao[n])\n",
+    "            #print()\n",
+    "print()\n",
+    "print('População final:')\n",
+    "print(populacao)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
