Atualizando todos experimentos+funções.py

--- a/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
+++ b/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from funcoes import individuo_cb, func_obj_cb"
+    "from funcoes import individuo_cb, funcao_objetivo_cb"
    ]
   },
   {
@@ -137,13 +137,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 1] 3\n",
-      "[0, 0, 0, 0] 0\n",
-      "[0, 1, 1, 1] 3\n",
-      "[0, 0, 0, 0] 0\n",
+      "[1, 1, 0, 0] 2\n",
       "[0, 0, 0, 1] 1\n",
-      "[0, 1, 1, 1] 3\n",
-      "[1, 0, 0, 0] 1\n",
+      "[1, 0, 1, 0] 2\n",
+      "[1, 0, 1, 0] 2\n",
+      "[1, 0, 1, 1] 3\n",
+      "[0, 0, 1, 1] 2\n",
+      "[1, 1, 0, 1] 3\n",
       "[0, 0, 0, 1] 1\n"
      ]
     }
@@ -151,7 +151,7 @@
    "source": [
     "for n in range(N):\n",
     "    candidato = individuo_cb(NUM_GENES)\n",
-    "    fobj = func_obj_cb(candidato)\n",
+    "    fobj = funcao_objetivo_cb(candidato)\n",
     "    print(candidato, fobj)"
    ]
   },
