--- a/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
+++ b/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from funcoes import func_obj_cb\n",
+    "from funcoes import funcao_objetivo_cb\n",
     "import itertools"
    ]
   },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +153,13 @@
     "        for gene3 in [0,1]:\n",
     "            for gene4 in [0,1]:\n",
     "                individuo = [gene1, gene2, gene3, gene4]\n",
-    "                fobj = func_obj_cb(individuo)\n",
+    "                fobj = funcao_objetivo_cb(individuo)\n",
     "                print (individuo, fobj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
    "source": [
     "# código com intertools\n",
     "for individuo in itertools.product([0,1], repeat = 4): #posso repetir o [0,1] o números de vezes q\n",
-    "    fobj =  func_obj_cb(individuo)                    # quero repetir\n",
+    "    fobj =  funcao_objetivo_cb(individuo)                    # quero repetir\n",
     "    print(individuo, fobj)"
    ]
   },
