--- a/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
+++ b/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "from funcoes import populacao_cb as cria_populacao_inicial\n",
-    "from funcoes import func_obj_pop_cb as func_obj_pop\n",
+    "from funcoes import funcao_objetivo_pop_cb as func_obj_pop\n",
     "from funcoes import selecao_roleta_max as funcao_selecao\n",
     "from funcoes import cruzamento_ponto_simples as funcao_cruzamento\n",
     "from funcoes import mutacao_cb as funcao_mutacao\n",
@@ -186,10 +186,10 @@
      "text": [
       "\n",
       "População inicial:\n",
-      "[[0, 1, 1, 0], [0, 1, 1, 0], [0, 0, 1, 1], [0, 0, 0, 1], [0, 1, 0, 1], [1, 1, 0, 1]]\n",
+      "[[1, 1, 1, 0], [1, 1, 1, 1], [1, 1, 0, 0], [0, 1, 1, 1], [0, 0, 0, 1], [1, 0, 0, 1]]\n",
       "\n",
       "População final:\n",
-      "[[1, 1, 0, 1], [1, 1, 1, 0], [1, 1, 1, 1], [0, 1, 1, 0], [1, 1, 1, 1], [1, 1, 0, 1]]\n"
+      "[[1, 1, 0, 0], [1, 1, 0, 1], [0, 1, 1, 0], [0, 1, 1, 0], [1, 0, 0, 1], [1, 1, 0, 1]]\n"
      ]
     }
    ],
