--- a/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
+++ b/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
@@ -51,15 +51,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from funcoes import populacao_nb\n",
-    "from funcoes import func_obj_pop_nb as func_obj_pop\n",
+    "from funcoes import populacao_cnb\n",
+    "from funcoes import funcao_objetivo_pop_cnb as func_obj_pop\n",
     "from funcoes import selecao_roleta_max as funcao_selecao\n",
     "from funcoes import cruzamento_ponto_simples as funcao_cruzamento\n",
-    "from funcoes import mutacao_nb\n",
+    "from funcoes import mutacao_cnb\n",
     "import random"
    ]
   },
@@ -97,10 +104,10 @@
    "outputs": [],
    "source": [
     "# funções locais\n",
-    "def cria_populacao_inicial(tamanho, n_genes): \n",
-    "    return populacao_nb(tamanho, n_genes, VALOR_MAX_CAIXA) \n",
-    "def funcao_mutacao(individuo): \n",
-    "    return mutacao_nb(individuo, VALOR_MAX_CAIXA)"
+    "def cria_populacao_inicial(tamanho, n_genes):\n",
+    "    return populacao_cnb(tamanho, n_genes, VALOR_MAX_CAIXA)\n",
+    "def funcao_mutacao(individuo):\n",
+    "    return mutacao_cnb(individuo, VALOR_MAX_CAIXA)"
    ]
   },
   {
@@ -114,10 +121,10 @@
      "text": [
       "\n",
       "População inicial:\n",
-      "[[53, 74, 75, 26], [96, 36, 34, 37], [53, 2, 29, 18], [85, 67, 15, 96], [90, 8, 35, 57], [48, 29, 50, 6]]\n",
+      "[[22, 37, 67, 86], [56, 57, 84, 97], [48, 77, 52, 13], [55, 19, 76, 2], [26, 35, 56, 90], [24, 48, 82, 40]]\n",
       "\n",
       "População final:\n",
-      "[[83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83], [83, 33, 71, 83]]\n"
+      "[[85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79]]\n"
      ]
     }
    ],
@@ -156,27 +163,6 @@
     "print('População final:')\n",
     "print(populacao)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
