adicionando experimento, atualizando exp. 5

--- a/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
+++ b/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,8 @@
     "NUM_COMBATENTES_NO_TORNEIO = 3\n",
     "\n",
     "# relacionadas ao problema a ser resulvido\n",
-    "SENHA = \"correcthorsebatterystaple\"\n",
-    "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "SENHA = \"correcthorsebatterystaple\" # o que estou tentando descobrir\n",
+    "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\" # todas letras que podem estar na minha senha\n",
     "NUM_GENES = len(SENHA)"
    ]
   },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,57 +123,64 @@
      "output_type": "stream",
      "text": [
       "Progresso da melhor senha já vista:\n",
-      "gpgrmesciblccgwokrjutfsgm - fitness: 122\n",
-      "txteijuhzuqacfucbrzriaqla - fitness: 118\n",
-      "gpteijuhzuqacfucbrzriaqla - fitness: 97\n",
-      "gpgrmesciuqacfucbrzriaqla - fitness: 92\n",
-      "gpteijuhzuqacfucbrzrpaqla - fitness: 90\n",
-      "gpgrijuhzuqacfucbrzrpaqla - fitness: 86\n",
-      "gpteijuhzuqacfurbrzrpaqla - fitness: 75\n",
-      "gpgrijuhzuqacfurbrzrpaqla - fitness: 71\n",
-      "gprrijuhzuqacfuybrzrpaqla - fitness: 63\n",
-      "gprrijuhzuqacfurbrzrpaqla - fitness: 60\n",
-      "gprrijuhzuqacfurbrzrpapla - fitness: 59\n",
-      "bprrijuhzuqacfurbrzrpapla - fitness: 56\n",
-      "cprrijuhzuqacfurbrzrpapla - fitness: 55\n",
-      "bprrijuhvuqacfurbrzrpapla - fitness: 52\n",
-      "cprrijuhvuqacfurbrzrpapla - fitness: 51\n",
-      "bprrijuhvusacfurbrzrpapla - fitness: 50\n",
-      "cprrijuhvusacfurbrzrpapla - fitness: 49\n",
-      "cprrihuhvusacfurbrzrpapla - fitness: 47\n",
-      "cprrihuhsusacfurbrzrpapla - fitness: 44\n",
-      "cprrihuhsusacfurbryrpapla - fitness: 43\n",
-      "cprrihuhsusacftrbryrpapla - fitness: 42\n",
-      "cprrihuhsssacftrbrzrpapla - fitness: 41\n",
-      "cprrihuhsssacftrbryrpapla - fitness: 40\n",
-      "cprrihuhsssfcftrbryrpapla - fitness: 37\n",
-      "cprrihuhsssfcftrbryrpaplc - fitness: 35\n",
-      "cprrihuhsssfcbtrbryrpapla - fitness: 33\n",
-      "cprrihuhsssfcbtrbryrpaplc - fitness: 31\n",
-      "cprrhhuhsssfcbtrbryrpaplc - fitness: 30\n",
-      "cprrihuhsssfcbtrbryrraplc - fitness: 29\n",
-      "cprrhhuhsssfcbtrbryrraplc - fitness: 28\n",
-      "cprrhhuhsssfcbtrfryrraplc - fitness: 26\n",
-      "cprrfhuhsssfcbtrbryrrapld - fitness: 25\n",
-      "cprrfhuhsssfcbttbryrrapld - fitness: 23\n",
-      "cprrfhuhossfcbtrbryrrapld - fitness: 21\n",
-      "cprrfhuhossfcbttbryrtapld - fitness: 17\n",
-      "cprrfhuhossfcbtteryrtapld - fitness: 14\n",
-      "cprrfhthossfcbtteryrtapld - fitness: 13\n",
-      "cprrfhthossfbbtteryrtapld - fitness: 12\n",
-      "cprrfgthossfbbtteryrtapld - fitness: 11\n",
-      "cprrfgthossfbatteryrtapld - fitness: 10\n",
-      "cprrfgthossfbatterystapld - fitness: 9\n",
-      "cprrfbthossfbatterystapld - fitness: 6\n",
-      "cprrebthossfbatterystapld - fitness: 5\n",
-      "cprrecthossfbatterystapld - fitness: 4\n",
-      "cprrecthossfbatterystaple - fitness: 3\n",
-      "correcthossfbatterystaple - fitness: 2\n",
-      "correcthorsfbatterystaple - fitness: 1\n",
+      "nsyvnkpogppjacyswhrqjgnmg - fitness: 139\n",
+      "dmcenkpogppjacmwfxorxgnmg - fitness: 123\n",
+      "nsyvnkpogppjacmwfxorxgnmg - fitness: 118\n",
+      "enxqajoafqjkbfysmyvqjgnmg - fitness: 110\n",
+      "enxqajoogppjacmwfxorxgnmg - fitness: 97\n",
+      "qssseapnoppjacmwfxorxgnmg - fitness: 88\n",
+      "essneapogppjacmwfxorsgnmg - fitness: 85\n",
+      "essneapnoppjacmwfxorxgnmg - fitness: 79\n",
+      "essseapnoppeacmwfxorxgnmg - fitness: 71\n",
+      "essseapnoppeacmwfxorsgnmg - fitness: 68\n",
+      "essseapnoppeacmwfrorxgnmg - fitness: 65\n",
+      "essseapnoppeacmwfrorsgnmg - fitness: 62\n",
+      "essseaploppeacmwfrorsgnmg - fitness: 60\n",
+      "essseapnoppeacvwfrorsgnmg - fitness: 57\n",
+      "elsseaploppeacvwfrorsgnmg - fitness: 54\n",
+      "elsseatloppeacvwfrorsgnmg - fitness: 50\n",
+      "elrseatloppeacvwfrorsgnmg - fitness: 49\n",
+      "elsseatioppeacvwfrorsgnmg - fitness: 47\n",
+      "elsseatloppeacvwfrsrsgnmg - fitness: 46\n",
+      "elrseatloppeacvwfrsrsgnmg - fitness: 45\n",
+      "emrseatloppeacvwfrsrsgnmg - fitness: 44\n",
+      "emrseatloppeacvrfrsrsgnmg - fitness: 43\n",
+      "emrseatkoppeacvrfrsrsgnmg - fitness: 42\n",
+      "emrseatfoppeacvrfrsrsgnmg - fitness: 41\n",
+      "emrseatfoppeacvrfrwrsgnmg - fitness: 37\n",
+      "emrseatfoppebcvrfrzrsgnmg - fitness: 35\n",
+      "emrseatforpebcvrfrzrsgnmg - fitness: 33\n",
+      "emrseatforpebcvrfrzrsgnmf - fitness: 32\n",
+      "emrseatforpebcvsfrzrsgnmf - fitness: 31\n",
+      "dmrseatforpebcvsfrzrsgnmf - fitness: 30\n",
+      "dorseatforpebcvsfrzrsgnmf - fitness: 28\n",
+      "dorseatforpebcvsfrzrscnmf - fitness: 24\n",
+      "dorreatforpebcvsfrzrscnmf - fitness: 23\n",
+      "dorreatforpebcvsfrzrscqmf - fitness: 22\n",
+      "correatforpebcvsfrzrscqmf - fitness: 21\n",
+      "correatforpebcusfrzrscqmf - fitness: 20\n",
+      "dorreatfortebcusfrzrscqmf - fitness: 19\n",
+      "correatfortebcusfrzrscqmf - fitness: 18\n",
+      "correatfortebcutfrzrscqmf - fitness: 17\n",
+      "correatfortebcutfrzsscqmf - fitness: 16\n",
+      "correatforsebcutfrzsscqmf - fitness: 15\n",
+      "correatforsebcutfrysscqmf - fitness: 14\n",
+      "correatgorsebcutfrysscqmf - fitness: 13\n",
+      "correbtgorsebcutfrysscqmf - fitness: 12\n",
+      "correbtgorsebcutdrystcqmf - fitness: 11\n",
+      "correbtgorsebcuterystcqmf - fitness: 10\n",
+      "correbtgorsebauterystcqmf - fitness: 8\n",
+      "correbtgorsebauterystbqmf - fitness: 7\n",
+      "correbtgorsebauterystaqmf - fitness: 6\n",
+      "correbtgorsebauterystapmf - fitness: 5\n",
+      "correbtgorsebatterystapmf - fitness: 4\n",
+      "correbthorsebauterystapme - fitness: 3\n",
+      "correcthorsebauterystapme - fitness: 2\n",
+      "correcthorsebauterystaple - fitness: 1\n",
       "correcthorsebatterystaple - fitness: 0\n",
       "\n",
       "Melhor palpite da senha encontrado:\n",
-      "correcthorsebatterystaple\n"
+      "correcthorsebatterystafle\n"
      ]
     }
    ],
@@ -181,10 +188,12 @@
     "populacao = cria_populacao_inicial(TAMANHO_POP, NUM_GENES)\n",
     "\n",
     "melhor_fitness_ja_visto = float(\"inf\")  # é assim que escrevemos infinito em python\n",
+    "                        # assim, o primeiro indivíduo já substituirá, \n",
+    "                        # pois vai ser melhor que infinito\n",
     "\n",
     "print(\"Progresso da melhor senha já vista:\")\n",
     "\n",
-    "for n in range(NUM_GERACOES):    \n",
+    "while melhor_fitness_ja_visto != 0:\n",
     "    \n",
     "    # Seleção\n",
     "    fitness = funcao_objetivo_pop(populacao)\n",
