--- a/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
+++ b/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
@@ -4,8 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Descobrindo a senha\n",
-    "===================\n",
+    "Experimento GA.01 - senha de tamanho variavel\n",
+    "========================================\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introdução\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete este texto e escreva uma breve introdução sobre seu experimento.\n",
     "\n"
    ]
   },
@@ -21,39 +37,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usar um algoritmo genético para descobrir uma senha.\n",
-    "\n"
+    "Resolver o problema da senha sem fornecer a informação do tamanho da senha para a função que gera a população.\n",
+    "\n",
+    "**Dica**: A função objetivo terá que quantificar em sua métrica tanto se o candidato acertou as letras quanto se acertou o tamanho da senha.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Descrição do problema\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Neste problema, a função objetivo deve saber a senha correta e quantificar de alguma maneira o quão perto ou longe os palpites estão da solução (veja que isso é algo que não temos no mundo real. Nenhum site irá te dizer se você está acertando ou errando seu palpite). O critério de parada deste problema é quando a senha for descoberta.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
    "source": [
     "## Importações\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todos os comandos de `import` devem estar dentro desta seção.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +74,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Códigos e discussão\n",
     "\n"
@@ -75,7 +84,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def individuo_senha_tv(tamanho_senha, letras):\n",
+    "    \"\"\"Cria um candidato para o problema da senha\n",
+    "    Args:\n",
+    "      tamanho_senha: inteiro representando o tamanho da senha.\n",
+    "      letras: letras possíveis de serem sorteadas.\n",
+    "    Return:\n",
+    "      Lista com n letras\n",
+    "    \"\"\"\n",
+    "\n",
+    "    candidato = []\n",
+    "    valores_senha_verdadeira = []\n",
+    "\n",
+    "    for n in range(tamanho_senha):\n",
+    "        candidato.append(gene_letra(letras))\n",
+    "        \n",
+    "    for s in senha_verdadeira:\n",
+    "        valores_senha_verdadeira.append(ord(s))\n",
+    "\n",
+    "    soma_senha_verdadeira = sum(valores_senha_verdadeira)\n",
+    "    \n",
+    "    while sum(cadidato) < senha_verdadeira\n",
+    "    return candidato\n",
+    "\n",
+    "def populacao_inicial_senha_tv(tamanho, letras):\n",
+    "    \"\"\"Cria população inicial no problema da senha\n",
+    "    Args\n",
+    "      tamanho: tamanho da população.\n",
+    "      letras: letras possíveis de serem sorteadas.\n",
+    "   \n",
+    "   Returns:\n",
+    "      Lista com todos os indivíduos da população no problema da senha.\n",
+    "    \"\"\"\n",
+    "    populacao = []\n",
+    "    tamanho_senha = range(\n",
+    "    for n in range(tamanho):\n",
+    "        populacao.append(individuo_senha(tamanho_senha, letras))\n",
+    "    return populacao\n",
+    "\n",
+    "def funcao_objetivo_senha_tv(individuo, senha_verdadeira):\n",
+    "    \"\"\"Computa a funcao objetivo de um individuo no problema da senha\n",
+    "    \n",
+    "    Args:\n",
+    "      individiuo: lista contendo as letras da senha\n",
+    "      senha_verdadeira: a senha que você está tentando descobrir\n",
+    "    \n",
+    "    Returns:\n",
+    "      A \"distância\" entre a senha proposta e a senha verdadeira. Essa distância\n",
+    "      é medida letra por letra. Quanto mais distante uma letra for da que\n",
+    "      deveria ser, maior é essa distância.\n",
+    "    \"\"\"\n",
+    "    diferenca = 0\n",
+    "\n",
+    "    for letra_candidato, letra_oficial in zip(individuo, senha_verdadeira):\n",
+    "        diferenca = diferenca + abs(ord(letra_candidato) - ord(letra_oficial))\n",
+    "\n",
+    "    return diferenca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +164,12 @@
     "# relacionadas ao problema a ser resulvido\n",
     "SENHA = \"correcthorsebatterystaple\" # o que estou tentando descobrir\n",
     "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\" # todas letras que podem estar na minha senha\n",
-    "NUM_GENES = len(SENHA)"
+    "# NUM_GENES = len(SENHA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,82 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progresso da melhor senha já vista:\n",
-      "itqujrmonssfboslxayhkmlkf - fitness: 149\n",
-      "ikpvnsolfbwjdbpchwtjycwmf - fitness: 146\n",
-      "ipqujrmonssfboslxayhkmlkf - fitness: 145\n",
-      "ipqujrmonssfboslxwtjycwmf - fitness: 125\n",
-      "ipqujrmonssfboslxwyhkblkf - fitness: 122\n",
-      "ipqujrmonssfboslgwtjycwmf - fitness: 108\n",
-      "ipqujrmonssfboslfwtjycwmf - fitness: 107\n",
-      "ipqujrmdnssfboswgwtjycwmf - fitness: 100\n",
-      "ipqufrmdnssfboswgwtjycwmf - fitness: 96\n",
-      "ipqufhmdnssfboswgwtjycwmf - fitness: 86\n",
-      "ipqufhmdnssfboswgwtjwcwmf - fitness: 84\n",
-      "gpqufhmdnssfboswgwtjwcwmf - fitness: 82\n",
-      "apqufhmdnssfboswgwtjwcwmf - fitness: 80\n",
-      "apqufhxdnssfboswgwtjwcwmf - fitness: 77\n",
-      "apqufhxdnssfboswgotjwcwmf - fitness: 75\n",
-      "apqufhxdnssfboswgwtjwclmf - fitness: 74\n",
-      "apqufhxdnssfbmswgwtjwclmf - fitness: 72\n",
-      "apqufhxdnssfbmswgwtvwcwmf - fitness: 69\n",
-      "apqufhxdnssfbmswgwtvwclmf - fitness: 66\n",
-      "apqpfhxdnssfbmswgwtvwclmf - fitness: 65\n",
-      "cpqpfhxdnssfbmswgwtvwclmf - fitness: 63\n",
-      "cpqufhxdnssfbmstgwtvwclmf - fitness: 61\n",
-      "cpqpfhxdnssfbmstgwtvwclmf - fitness: 60\n",
-      "cpqpfhxdnssfbistgwtvwclmf - fitness: 56\n",
-      "cpqpfhxdnssfbistgwtvwcsmf - fitness: 55\n",
-      "cpqpfhxdnrsfbistgwtvwcsmf - fitness: 54\n",
-      "cpqpfhxfnssfbistgwtvwcsmf - fitness: 53\n",
-      "cpqpfhxfnrsfbistgwtvwcsmf - fitness: 52\n",
-      "cpqpfhxfnrsfbistgwtvwcslf - fitness: 51\n",
-      "cpqpfhrfnrsfbistgwtvwcslf - fitness: 49\n",
-      "cpqpfhrfnrsfbistgotvwcslf - fitness: 47\n",
-      "cpqpfevfnrsfbistgwtvwcslf - fitness: 46\n",
-      "cpqpfevfnrsfbistgotvwcslf - fitness: 44\n",
-      "cpqpfevfnrsfbistgotvtcslf - fitness: 41\n",
-      "cpqpfevfnrsebistgotvtcslf - fitness: 40\n",
-      "cpqpfevfnrsfbistgozvtcslf - fitness: 37\n",
-      "cpqpfevfnrsfbistgozvtcqlf - fitness: 35\n",
-      "coqpfevfnrsfbistgozvtcqlf - fitness: 34\n",
-      "coqpfevfnrsfbistgoyvtcqlf - fitness: 33\n",
-      "coqpfevfnrsfbistgoyutcqlf - fitness: 32\n",
-      "coqpfevfnrsfbistdoyutcqlf - fitness: 31\n",
-      "coqpfevfnrsfbhstdoyutcqlf - fitness: 30\n",
-      "coqpfcvfnrsfbistdoyutcqlf - fitness: 29\n",
-      "coqpfcvfnrsfbistdsyutcqlf - fitness: 27\n",
-      "coqpfcvfnrsebistdsyutcqlf - fitness: 26\n",
-      "coqpfcvfnrsebcstdsyutcqlf - fitness: 20\n",
-      "coqpfctfnrsebcstdsyutcqlf - fitness: 18\n",
-      "coqqfctfnrsebcstdsyutcqlf - fitness: 17\n",
-      "coqqfcthnrsebcstdsyutcqlf - fitness: 15\n",
-      "coqqfcthnrsebcstesyutcqlf - fitness: 14\n",
-      "coqqfcthnrsebcstesyrtcqlf - fitness: 13\n",
-      "coqqfcthorsebcstesyttcqlf - fitness: 12\n",
-      "coqqfcthorsebcstesystcqlf - fitness: 11\n",
-      "coqqfcthorsebcstesystcqle - fitness: 10\n",
-      "coqsfcthorsebcstesystaqle - fitness: 8\n",
-      "coqsdcthorsebastesystaqle - fitness: 6\n",
-      "coqrecthorsebbstesystaqle - fitness: 5\n",
-      "coqrecthorsebastesystaqle - fitness: 4\n",
-      "coqrecthorsebasterystaqle - fitness: 3\n",
-      "coqrecthorsebatterystaqle - fitness: 2\n",
-      "coqrecthorsebatterystaple - fitness: 1\n",
-      "correcthorsebatterystaple - fitness: 0\n",
-      "\n",
-      "Melhor palpite da senha encontrado:\n",
-      "correcthorsebatterystaple\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "populacao = cria_populacao_inicial(TAMANHO_POP, NUM_GENES)\n",
     "\n",
@@ -243,6 +243,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-   Use células de código para o código.\n",
+    "\n",
+    "-   Use células de texto para a discussão.\n",
+    "\n",
+    "-   A discussão não deve ser feita em comentários dentro das células de código. Toda discussão deve acontecer após o resultado sendo discutido foi apresentado. Exemplo: não discuta um gráfico antes de apresentá-lo.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,7 +273,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a "
+    "Delete este texto e escreva sua conclusão.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências consultadas\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.  Delete este texto e inclua suas referências ordenadas numericamente. Se for referenciar no notebook, use o número entre colchetes (exemplo: para citar essa referência aqui escreva &ldquo;[1]&rdquo; sem as áspas).\n",
+    "\n",
+    "2.  Cada item deve ser numerado. Siga o padrão apresentado.\n",
+    "\n",
+    "3.  Caso não tenha nenhuma referência consultada, delete esta seção e o texto contido nela!\n",
+    "\n"
    ]
   },
   {
@@ -262,6 +302,14 @@
    "metadata": {},
    "source": [
     "## Playground\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todo código de teste que não faz parte do seu experimento deve vir aqui. Este código não será considerado na avaliação.\n",
     "\n"
    ]
   },
